fix(ui): hide side HTBaChristian button by changing z-index

--- a/frontend/src/components/templates/MainPage/components/SideHTBaChristianButton/SideHTBaChristianButton.module.css
+++ b/frontend/src/components/templates/MainPage/components/SideHTBaChristianButton/SideHTBaChristianButton.module.css
@@ -16,7 +16,7 @@
   user-select: none;
 
   font-weight: 700;
-  z-index: 1000;
+  z-index: 29;
   transition: all 0.2s ease-in-out;
 }
 
